# tdi

./: .gitignore  CMakeLists.txt
cmake/: SetTargetVersion.cmake  tdi-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
include/tdi/common/tdi_json_parser/: tdi_cjson.hpp
src/: CMakeLists.txt
src/arch/: CMakeLists.txt
src/arch/pna/: CMakeLists.txt
src/arch/psa/: CMakeLists.txt
src/arch/tna/: CMakeLists.txt
src/c_frontend/: CMakeLists.txt
src/targets/dummy/: CMakeLists.txt
src/tdi_json_parser/: CMakeLists.txt
src/tdi_json_parser/tests/: CMakeLists.txt
